# feishu-cc

./: .coverage  .gitignore  CLAUDE.md  LICENSE  README.md  pyproject.toml
src/feishu_cc/: __init__.py  __main__.py  app.py  claude_bridge.py  config.py  feishu_client.py
tests/: test_app.py  test_claude_bridge.py  test_config.py  test_feishu_client.py  test_main.py
