[project]
name = "feishu-cc"
version = "0.1.0"
description = "Feishu IM bridge for Claude Code CLI"
requires-python = ">=3.9"
dependencies = [
    "lark-oapi>=1.6.0",
    "loguru>=0.7.0",
]

[project.scripts]
feishu-cc = "feishu_cc.__main__:main"

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
testpaths = ["tests"]
filterwarnings = [
    "ignore::DeprecationWarning:lark_oapi*",
    "ignore:coroutine '.*' was never awaited:RuntimeWarning",
]

[build-system]
requires = ["setuptools>=68.0"]
build-backend = "setuptools.build_meta"
